--- a/papers/references.bib
+++ b/papers/references.bib
@@ -853,7 +853,7 @@ year = {1999}
 }
 
 @Article{Johnson11,
-  Title                    = {Magnetically inducd electric polarization reversal in multiferroic TbMn$_2$O$_5$: Terbium spin reorientation studied by resonant x-ray diffraction},
+  Title                    = {Magnetically inducd ferroelectric polarization reversal in multiferroic TbMn$_2$O$_5$: Terbium spin reorientation studied by resonant x-ray diffraction},
   Author                   = {R.D. Johnson and C. Mazzoli and S.R. Bland and C.-H. Du and P.D. Hatton},
   Journal                  = {Phys. Rev. B},
   Pages                    = {054438},
@@ -1197,7 +1197,7 @@ year = {1999}
 }
 
 @Article{Menshenin09,
-  Title                    = {Interrelation between the soliton lattice and electric polarization in RMn$_2$O$_5$ oxides},
+  Title                    = {Interrelation between the soliton lattice and ferroelectric polarization in RMn$_2$O$_5$ oxides},
   Author                   = {{Men'shenin}, V.},
   Journal                  = {Journal of Experimental and Theoretical Physics},
   Pages                    = {236-240},
@@ -1669,7 +1669,7 @@ Pages                    = {1831-1836},
 }
 
 @Article{Zhao13,
-  Title                    = {{Experimental observation of ferrielectricity in multiferroic DyMn2O5: revisiting the electric polarization}},
+  Title                    = {{Experimental observation of ferrielectricity in multiferroic DyMn2O5: revisiting the ferroelectric polarization}},
   Author                   = {{Zhao}, Z.~Y. and {Liu}, M.~F. and {Li}, X. and {Lin}, L. and {Yan}, Z.~B. and {Dong}, S. and {Liu}, J.-M.},
   Journal                  = {ArXiv e-prints},
   Volume                   = {1306.2031},
@@ -6551,7 +6551,7 @@ year = {1993}
 }
 
 @article{Vanderbilt1993,
-abstract = {A definition of the electric polarization of an insulating crystalline solid is given in terms of the centers of charge of the Wannier functions of the occupied bands. The change of this quantity under an adiabatic evolution of the Hamiltonian has previously been shown to correspond to the physical change in polarization. Here, we show that the polarization as defined above also has a direct and predictive relationship to the surface charge which accumulates at an insulating surface or interface. {\textcopyright} 1993 The American Physical Society.},
+abstract = {A definition of the ferroelectric polarization of an insulating crystalline solid is given in terms of the centers of charge of the Wannier functions of the occupied bands. The change of this quantity under an adiabatic evolution of the Hamiltonian has previously been shown to correspond to the physical change in polarization. Here, we show that the polarization as defined above also has a direct and predictive relationship to the surface charge which accumulates at an insulating surface or interface. {\textcopyright} 1993 The American Physical Society.},
 author = {Vanderbilt, David and King-Smith, R. D.},
 doi = {10.1103/PhysRevB.48.4442},
 file = {:home/ponet/Downloads/PhysRevB.48.4442.pdf:pdf},
