--- a/papers/Introduction/Introduction.tex
+++ b/papers/Introduction/Introduction.tex
@@ -20,53 +20,53 @@ To put it differently: the mass of the ions is so high and the elastic potential
 This is, of course, the core idea behind the well-known Born-Oppenheimer approximation~\cite{Born1927}.
 Likewise, the influence of the electrons on the ions appears as a smeared out average, which leads to so-called mean field approximations.
 In most cases these considerations allow for a separated description of both systems.
-However, there are exceptions for which these approximations fail spectacularly with the prime example being superconductivity, where the coupling between electrons and phonons is not only non negligible, it downright forms the linchpin for the exotic physics that are observed in these materials.
+However, there are exceptions when these approximations fail spectacularly with the prime example being superconductivity, where the coupling between electrons and phonons is not only non-negligible, it downright forms the linchpin for the exotic physics that is observed in these materials.
 \\\\
-This brings us to the subject matter of this work, in which the focus will lie on similar such effects that depend crucially on these often negligible interactions between two relatively well-understood subsystems.
-The three main interactions we investigate are: relativistic spin-orbit coupling (SOC), coupling the charge and spin sectors of the Hamiltonian; Heisenberg magnetic exchange striction, coupling spins to atomic displacements (phonons); and electrostriction, where electric polarization leads to an associated strain texture.
-We will use a variety of theoretical and numerical tools and techniques to unravel how these effects manifest themselves in real materials, often motivated by experimental observations.
+This brings us to the subject matter of this Thesis, in which the focus will lie on similar such effects that depend crucially on these often negligible interactions between two relatively well-understood subsystems.
+The three main interactions we investigate are: relativistic spin-orbit coupling (SOC), coupling the charge and spin sectors of the Hamiltonian; Heisenberg magnetic exchange striction, which couples spins to atomic displacements (phonons); and electrostriction, the interaction between ferroelectric polarization and strain.
+We will use a variety of analytical and numerical tools and techniques to unravel how these effects manifest themselves in real materials, often motivated by experimental observations.
 
-Aside from the fundamental interest, technological development has always been a strong driving force in Condensed Matter research. Here too does the focus on interactions between subsystems offer promising prospects, since it theoretically allows for influencing one subsystem by applying a perturbation to the other.
-More efficient or granular manipulation of magnetic order through applied currents or electric fields is one example of the many benefits that can be enabled through the strong coupling between orders.
-Breakthroughs in the understanding of Condensed Matter have historically led to leaps in technology, e.g. the dramatic increase in density and efficiency of hard disks after the discovery of the giant magnetoresistance effect.
+Aside from the fundamental interest, technological development has always been a strong driving force in condensed matter research. Here too does the focus on interactions between subsystems offer promising prospects, since it allows, in principle, for an influence over one subsystem by applying a perturbation to the other.
+More efficient or granular manipulation of magnetic order via spin currents, or even electric fields, is one example of the many benefits that can be enabled by strongly interacting orders.
+Breakthroughs in the understanding of condensed matter have historically led to leaps in technology, e.g. the dramatic increase in density and efficiency of hard disks after the discovery of the giant magnetoresistance effect.
 However, it is often not trivial to find materials where such cross-order interactions are large enough to be effictively exploited for technological applications.
 It is, therefore, crucial to gain an intimate insight into the governing physics of these interactions in order to eventually engineer materials and devices to maximally utilize them.
 In this Thesis we aim to accomplish just that by investigating a selection of real materials where the previously mentioned interactions lead to large, or unexpected, effects.
 \\\\
 As mentioned before, spin-orbit coupling is a relativistic interaction that can often be ignored in the study of the electronic structure in crystals.
-In materials with heavier constituent ions, it often becomes a requirement to include this effect perturbatively, or even on an equal footing with the other contributions to the Hamiltonian.
-If, moreover, the inversion symmetry is broken, this can lead to spin-polarized Bloch functions as the eigenstates of the electrons in the crystal, and a linear $k$ dependent spin-splitting can develop away from time-reversal symmetric points in the Brillouin Zone.
+In materials with heavier constituent ions, it often becomes a requirement to treat this effect perturbatively, or even on an equal footing with the other contributions to the Hamiltonian.
+If, moreover, the inversion symmetry is broken, this can lead to spin-polarized Bloch functions as the eigenstates of the electrons in the crystal, and a linear $k$-dependent spin-splitting can develop in the band structure away from time-reversal symmetric points in the Brillouin Zone.
 This spin-splitting is usually attributed to the Rashba-Bychkov effect, which is a purely relativistic effect that can be derived through a $\bm{k}\cdot \bm{p}$ expansion of the effective electronic Dirac equation\footnote{Integrating out positrons by performing the Fouldy-Wouthuysen transformation}.
 However, as will be demonstrated in Chapter~\ref{ch:Rashba}, another effect must lie at the origin in order to fully explain  all the properties associated with the observed spin-splitting.
-We will show there that the effect is rather caused by a combination of the atomic spin-orbit coupling and the electrostatic interaction of the electron's orbital angular momentum with the electric polarization.
-From a technological standpoint, this large electric polarization dependent spin-splitting can be used to generate spin-polarized currents, where the spin's orientation can be reversed by a sufficiently large external electric field that reverses the electric polarization.
+We will show there that the effect is rather caused by a combination of the atomic spin-orbit coupling and the electrostatic interaction of the electron's orbital angular momentum with the ferroelectric polarization.
+From a technological standpoint, this large polarization-dependent spin-splitting can be used to generate spin-polarized currents, where the carriers' spin orientation can be reversed by a sufficiently large external electric field that reverses the ferroelectric polarization.
 This could be exploited, for example, in a device first dreamt up by Datta and Das \cite{Datta1990}, a spin based field-effect transistor.
 \\\\
 Chapter ~\ref{ch:GdMn2O5} continues with a study of GdMn$_2$O$_5$, a hallmark multiferroic material, where an inversion symmetry breaking magnetic configuration leads to a nonzero ferroelectric polarization through the Heisenberg exchange striction and geometric frustration.
-Since the magnetic and ferroelectric order originate from the same underlying mechanism, they are coupled rather strongly in this multiferroic.
+Since the magnetic and ferroelectric orders originate from the same underlying mechanism, they are coupled rather strongly in this multiferroic.
 We will describe a very peculiar dependence of the magnetoelectric switching on the angle between the applied magnetic field and the crystalline $a$ axis, which leads to three distinct switching regimes for the ferroelectric polarization.
-One of these is particularly interesting since it demonstrates a never before observed four state doubled hysteresis loop.
-Moreover, we show that the novel four state loop is topologically different from, and protected by, the two ``neighboring'' switching regimes that are present in the material.
-GdMn$_2$O$_5$ is, therefore, another prime example where one coupled order can be influenced by a perturbation to the other.
-As will be shown, the behavior can be described by a relatively simple semi-classical spin model, with the four-state behavior being present for a surprisingly large set of model parameters.
-Furthermore, we demonstrate that, in the four-state switching regime, half the spins perform a full 360$^\circ$ rotation through two up--and--down sweeps of the external magnetic field.
+One of these is particularly interesting since it demonstrates a never before observed four state double hysteresis loop.
+Moreover, we show that the novel four state loop is topologically different from, and protected by, the two ``neighboring'' switching regimes that appear when the field is applied at lower or higher angles.
+GdMn$_2$O$_5$ is, therefore, another prime example where one coupled order can be influenced through the manipulation of the other.
+As will be shown, the behavior can be described by a relatively simple semi-classical spin model, with the four-state regime appearing for a surprisingly broad range of model parameters.
+Furthermore, we demonstrate that, in the four-state switching regime, half the spins perform a full 360$^\circ$ rotation as a result of two up--and--down sweeps of the external magnetic field.
 This is a microscopic analogue of the ``crankshaft'' in a car, converting the linear up--and--down motion of the magnetic field (the ``piston'') into a unidrectional motion of the spins (the ``driveshaft'').
-It will also be shown that the evolution of the energy landscape that lies at the origin of this behavior is very similar to the on of a Thouless charge pump, more specifically to the one demonstrated in cold atom systems \cite{Lohse16}.
-The wealth of effects that emerge because of the combination of relatively well-understood model ingredients is a clear demonstration of an often reoccurring theme in Condensed Matter: more is different.  
+We will show that it is the evolution of the energy landscape that lies at the heart of this behavior is very similar to the on of a Thouless charge pump, more specifically to the one demonstrated in cold atom systems \cite{Lohse16}.
+The wealth of effects that emerge because of the combination of relatively well-understood model ingredients is a clear demonstration of an often reoccurring theme in condensed matter: more is different.  
 \\\\
-In Chapter~\ref{ch:CrSDW} the focus will be shifted to the aspect of increased control granularity by indirect perturbation of coupled orders.
+In Chapter~\ref{ch:CrSDW} the focus will be shifted to the aspect of dynamical control with increased granularity as a result of the indirect perturbation of coupled orders.
 We use the control over a lattice vibration through the excitation of a coupled spin density wave (SDW) in a thin film of elemental Chromium as a case study.
-In this material, a peculiar nesting of the Fermi surface results in the stabilization of the SDW, which in turn will optimize bondlengths between antiferromagnetically coupled ions to maximize the gained magnetic exchange energy.
-In essence, this leads to a shortening of bonds between ions with large spins, and a lengthening of those between small spins, causing a periodic lattice displacement (PLD) that can be probed using X-ray diffraction spectroscopy.
-As will be shown, by using optical pulses to excite the electronic subsystem constituting the SDW, its diminished size leads to an oscillation of the phonon associated with the PLD.
-The electronic subsystem then subsequently cools back down, partly restoring the SDW, while the phonon oscillation mostly remains due to its slow dynamics and low damping.
+In this material, a nesting of the Fermi surface results in the stabilization of the SDW, which in turn will optimize bondlengths between antiferromagnetically coupled ions to maximize the gained magnetic exchange energy.
+In essence, this leads to a shortening of bonds between ions with large spins, and a lengthening of those between small spins near the nodes of the SDW, causing a periodic lattice displacement (PLD) that can be probed using X-ray diffraction spectroscopy.
+By using optical pulses that excite the electronic subsystem forming SDW, we show that the resulting  decrease in its magnitude causes an oscillation of the phonon associated with the coupled PLD.
+The electronic subsystem then subsequently cools back down, partly restoring the SDW, while the phonon oscillation persists due to its slow dynamics and low damping.
 Even in the case of a single pulse does such an indirect excitation lead to an increased oscillation amplitude of the PLD phonon compared with the one achieved through more usual displacive mechanism.
 More interestingly, we show that by applying a carefully designed sequence of pulses, an indirect, but incredibly granular, control can be achieved over the amplitude of the PLD phonon mode.
 We also show that using multiple pulses empowers much greater phonon excitation amplitudes than can be achieved with a single pulse.
 The very fast (essentially instantaneous) dynamics of the SDW and relatively strong coupling to the phonon mode with much slower dynamics, lies at the core of this behavior.
 While the technological relevance of this process is not immediately obvious, it does highlight the capabilities that a coupling between two orders with different dynamics can offer in terms of control, to the point where a pulse train can be designed using our model, such that the PLD oscillation follows a given envelope signal almost perfectly.
 \\\\
-We conclude this Thesis in Chapter~\ref{ch:Softening} by a careful study of the interaction between strain and ferroelectric polarization at 180$^\circ$ ferroelectric domain walls in BaTiO$_3$.
+We conclude this Thesis in Chapter~\ref{ch:Softening} by a systematic study of the implications that result from the interaction between strain and ferroelectric polarization at 180$^\circ$ ferroelectric domain walls in BaTiO$_3$.
 Surprisingly, these walls appear mechanically softer to an applied tip, even though they are not ferroelastic and thus do not separate domains with different strain textures.
 Indeed, in ferroelastic domain walls one domain would be favored over the other by the force applied through the tip, meaning that when the tip is applied to the wall, it would excite a soft sliding domain wall mode.
 This mode is not present in either of the ferroelastic domains and thus the ferroelastic domain wall would appear softer.
@@ -74,4 +74,4 @@ In our case, however, we uncover that a similar spirited but fundamentally diffe
 Even though they are not ferroelastic, we find that a relatively long ranged strain texture still appears around them, which interacts mechanically with the applied tip.
 This in turn leads to a bending or sliding of the domain wall towards the tip, leading to a large deformation and thus an apparent softening.
 
-Seen as certain ferroelectric domain walls are conductive, this could open the door to the efficient manipulation of conducting channels through the application of strain, which could be used in electronic devices.
+Since certain ferroelectric domain walls are conductive, this could open the door to the efficient manipulation of conducting channels through the application of strain, which could be used in electronic devices.
