--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -186,7 +186,7 @@ Applying approximations like these systematically, allows to identify and approx
 They form the backbone and starting point for further investigations gradually including more complexity to describe increasingly complex physics.
 
 This Thesis will discuss effects that depend crucially on these, usually negligible, interactions between two relatively well-understood subsystems.
-The three main interactions that will be discussed are: relativistic spin-orbit coupling (SOC), coupling charge and spin sectors of the Hamiltonian; Heisenberg magnetic exchange striction, coupling spins to atomic displacements (phonons); and electrostriction, where electric polarization leads to an associated strain texture.
+The three main interactions that will be discussed are: relativistic spin-orbit coupling (SOC), coupling charge and spin sectors of the Hamiltonian; Heisenberg magnetic exchange striction, coupling spins to atomic displacements (phonons); and electrostriction, where ferroelectric polarization leads to an associated strain texture.
 
 These interactions are studied in functional materials, with the occasional eye towards applications in technology.
 The reason why these cross-order couplings can be interesting for technological applications, is that often one of the orders is more robust with respect to perturbations, and therefore more long-lived, but also harder to control efficiently.
@@ -211,8 +211,8 @@ We utilize both theoretical and computational tools to understand the nature of 
 \mainmatter
 % \Include{Introduction}
 
-\Include{Rashba}
-% \Include{GdMn2O5}
+% \Include{Rashba}
+\Include{GdMn2O5}
 % \Include{Cr}
 
 % \Include{Softening}
